--- a/app/views/announcements/index.html.haml
+++ b/app/views/announcements/index.html.haml
@@ -1,4 +1,6 @@
-%h1 Listing announcements
+.image-container
+  =image_tag 'pexels-photo-51415.jpeg'
+  %h1 Announcements
 = link_to 'Add announcement', '#',  id: 'new-announcement-link'
 #new-announcement
   =render 'announcements/form'
