--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -2,5 +2,8 @@
   .field
     = f.label :group_name
     = f.text_field :group_name
+  .field
+    =f.label :group_image
+    =f.file_field :group_image
   .actions
     = f.submit 'Save'
