--- a/app/assets/stylesheets/groups.sass
+++ b/app/assets/stylesheets/groups.sass
@@ -5,12 +5,27 @@
 #new-group
   display: none
 
-.cards
+.new-group-container
+  margin: 30px 0 0 30px
+  display: block
+  a
+    font-size: 30px
+    color: black
+    text-decoration: none
+    &:hover
+      text-decoration: underline
+    .fas
+      font-size: 30px
+
+
+
+.groups-cards
   display: grid
-  grid-template-columns: repeat(auto-fill, minmax(550px, 1fr))
+  grid-template-columns: repeat(auto-fill, minmax(450px, 1fr))
   grid-gap: 30px
-  max-width: 1860px
+  max-width: 1560px
   margin: 50px auto 30px
+  @include image-fill
   .cell
     margin: 30px
     position: relative
@@ -28,7 +43,7 @@
       position: absolute
       top: 15px
       text-align: center
-      width: 30%
+      max-width: 60%
       left: 50%
       right: -50%
       transform: translate( -50%)
@@ -38,7 +53,7 @@
     .container
       position: absolute
       bottom: 15px
-      width: 60%
+      width: 80%
       left: 50%
       right: -50%
       transform: translate( -50%)
@@ -51,9 +66,6 @@
           color: white
           padding: 5px
     img
-      width: 100%
-      height: 100%
-      object-fit: cover
       border-radius: 8px
 
 .pagination
@@ -85,3 +97,53 @@
     margin-right: 1em
   .next_page
     margin-left: 1em
+
+.group-announcements
+  display: block
+  max-width: 80%
+  margin: 20px auto
+  .announcement-cell
+    position: relative
+    margin: 10px 0
+    border: 2px solid red
+    border-radius: 15px
+    max-height: 100%
+    h1
+      position: absolute
+      top: 5px
+      left: 5px
+      font-size: 25px
+    .data
+      position: absolute
+      top: 35px
+      left: 10px
+      font-size: 15px
+    .city
+      position: absolute
+      top: 55px
+      left: 10px
+      font-size: 15px
+    .group-name
+      position: absolute
+      bottom: 5px
+      left: 10px
+    .description
+      position: relative
+
+
+@media only screen and (max-width: 450px)
+  .cards
+    margin: 0
+    grid-template-columns: 1fr
+    grid-gap: 0
+    .cell
+      margin: 5px
+      .user-count
+        font-size: 10px
+        padding: 5px
+      h3
+        font-size: 15px
+        padding: 5px
+      a
+        font-size: 10px
+        padding: 0
