--- a/app/assets/stylesheets/home.sass
+++ b/app/assets/stylesheets/home.sass
@@ -1,15 +1,67 @@
-.index_container
-  width: 100%
-  height: 70vh
-  img
-    object-fit: fill
-    width: 100%
-    height: 70vh
-  h1
-    color: white
-    border: 1px solid white
-    padding: 10px
-    border-radius: 8px
-    position: absolute
-    top: 35%
-    left: 50%
+//.index_container
+//  width: 100%
+//  height: 70vh
+//  @include image-fill
+//  h1
+//    color: white
+//    border: 1px solid white
+//    padding: 10px
+//    border-radius: 8px
+//    position: absolute
+//    top: 50%
+//    left: 50%
+
+@media (min-width: 700px)
+  .index-content
+    margin: 50px auto
+    max-width: 80%
+    max-height: 100vh
+    display: grid
+    grid-gap: 5px
+    grid-template-columns: repeat(5, 1fr)
+
+    .index-content-item
+      background-color: #222222
+      display: flex
+      justify-content: center
+      align-items: center
+
+      @include image-fill
+      &.info1
+        background-color: #2E2F30
+        grid-column: span 2
+        grid-row: span 3
+      &.figure1
+        grid-column: span 3
+        grid-row: span 3
+      &.figure2
+        grid-row: span 4
+        grid-column: span 2
+      &.info2
+        background-color: darkorange
+        grid-column: span 3
+        grid-row: span 3
+      &.figure3
+        grid-column: span 3
+        grid-row: span 3
+
+      &.figure4
+        grid-column: span 2
+        grid-row: span 3
+
+
+
+
+@media only screen and (max-width: 700px)
+  //.index_container
+  //  height: 100vh
+  //  img
+  //    height: 100%
+  //  h1
+  //    position: absolute
+  //    font-size: 15px
+  //    transform: translate(-70%, 250%)
+  .index-content
+    @include image-fill
+    .index-content-item
+      margin-top: 10px
