--- a/app/views/groups/index.html.haml
+++ b/app/views/groups/index.html.haml
@@ -1,16 +1,18 @@
 %main
-  %h1 Listing groups
-
-  = link_to 'New Group', '#', id: 'new-group-link'
+  .image-container
+    =image_tag 'pexels-photo-51415.jpeg'
+    %h1 Groups list
+  .new-group-container
+    = link_to 'New Group', '#', id: 'new-group-link'
+    .fas.fa-plus-circle
 
   #new-group
     =render 'groups/form'
 
-  %section.cards
-    - @groups.each do |group|
+  %section.groups-cards
+    -@groups.each do |group|
       .cell{id: "group_#{group.id}"}
-        =image_tag 'wow.jpg'
-
+        =image_tag group.group_image.url
         .user-count
           = @count_users.count(group.id)
           .fas.fa-users
