--- a/app/assets/stylesheets/_mixins.sass
+++ b/app/assets/stylesheets/_mixins.sass
@@ -20,3 +20,15 @@
     display: block
     width: 100%
     height: 100%
+
+=adding-button
+  margin: 30px 0 0 30px
+  display: block
+  a
+    font-size: 30px
+    color: black
+    text-decoration: none
+    &:hover
+      text-decoration: underline
+    .fas
+      font-size: 30px
