--- a/app/assets/stylesheets/announcements.sass
+++ b/app/assets/stylesheets/announcements.sass
@@ -4,3 +4,28 @@
 #new-announcement
   display: none
 
+.announcements
+  display: block
+  max-width: 80%
+  margin: 20px auto
+  grid-template-rows: repeat(auto-fill, minmax(300px, 1fr))
+  .announcement-cell
+    background-color: lightslategrey
+    margin: 15px 0
+    padding: 20px
+    border: 2px solid #2E2F30
+    border-radius: 15px
+    .left
+      h1
+        margin: 5px 5px
+      .date, .group-name
+        margin: 5px 10px 10px
+        font-size: 15px
+      .city
+        margin: 20px 10px 10px
+        font-size: 15px
+
+.comment-form
+  display: block
+  max-width: 50%
+  margin: auto
