--- a/app/assets/stylesheets/comments.sass
+++ b/app/assets/stylesheets/comments.sass
@@ -1,3 +1,14 @@
 // Place all the styles related to the comments controller here.
 // They will automatically be included in application.sass.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.comments-container
+  width: 50%
+  display: block
+  margin: 20px auto
+  .comment
+    border-bottom: #222222 2px solid
+    margin: 10px 0
+    .comment-content
+      padding: 10px
+
