--- a/app/assets/stylesheets/groups.sass
+++ b/app/assets/stylesheets/groups.sass
@@ -5,20 +5,16 @@
 #new-group
   display: none
 
+#new-announcement
+  display: none
+
+
 .new-group-container
-  margin: 30px 0 0 30px
-  display: block
-  a
-    font-size: 30px
-    color: black
-    text-decoration: none
-    &:hover
-      text-decoration: underline
-    .fas
-      font-size: 30px
+  @include adding-button
 
-
-
+.comments
+  width: 100%
+  text-align: center
 .groups-cards
   display: grid
   grid-template-columns: repeat(auto-fill, minmax(450px, 1fr))
@@ -97,38 +93,6 @@
     margin-right: 1em
   .next_page
     margin-left: 1em
-
-.group-announcements
-  display: block
-  max-width: 80%
-  margin: 20px auto
-  .announcement-cell
-    position: relative
-    margin: 10px 0
-    border: 2px solid red
-    border-radius: 15px
-    max-height: 100%
-    h1
-      position: absolute
-      top: 5px
-      left: 5px
-      font-size: 25px
-    .data
-      position: absolute
-      top: 35px
-      left: 10px
-      font-size: 15px
-    .city
-      position: absolute
-      top: 55px
-      left: 10px
-      font-size: 15px
-    .group-name
-      position: absolute
-      bottom: 5px
-      left: 10px
-    .description
-      position: relative
 
 
 @media only screen and (max-width: 450px)
