--- a/app/views/comments/_comment.html.haml
+++ b/app/views/comments/_comment.html.haml
@@ -1,13 +1,11 @@
-%ul{id: "comment_#{comment.id}"}
-  %p
-    %b User:
-    = comment.user.username
-    = time_ago_in_words(comment.created_at)
-  %p
-    %b Content:
-    = comment.content
-  - if comment.user.id == current_user[:id]
-    = link_to 'Delete comment', announcement_comment_path(@announcement, comment), method: :delete, data: {confirm: 'Are you sure?'}, remote: true
-
+.comments-container
+  .comment{id: "comment_#{comment.id}"}
+    %p
+      = comment.user.username
+      = time_ago_in_words(comment.created_at)
+    %p.comment-content
+      = comment.content
+    - if comment.user.id == current_user[:id]
+      = link_to 'Delete comment', announcement_comment_path(@announcement, comment), method: :delete, data: {confirm: 'Are you sure?'}, remote: true
 
 
