Updated views,ajax is working now with in every view

--- a/app/views/announcements/create.js.erb
+++ b/app/views/announcements/create.js.erb
@@ -1,2 +1,1 @@
-$('#announcements').append('<%= j render @users_announcements %>');
-$('#new-announcement').fadeToggle()
+$("#container").append('<%= j render @announcement %>');
