--- a/app/views/announcements/_form.html.haml
+++ b/app/views/announcements/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for @announcement, remote: true do |f|
+= form_with model: @announcement do |f|
   .field
     = f.label :title
     = f.text_field :title
