--- a/app/views/groups/index.html.haml
+++ b/app/views/groups/index.html.haml
@@ -10,22 +10,23 @@
     =render 'groups/form'
 
   %section.groups-cards
-    -@groups.each do |group|
-      .cell{id: "group_#{group.id}"}
-        =image_tag group.group_image.url
-        .user-count
-          = @count_users.count(group.id)
-          .fas.fa-users
-        %h3=group.group_name
-        .container
-          -if @user_group_ids.include?(group.id)
-            %p= link_to 'Show', group
-            -if current_user[:id] != group.created_by
-              %p= link_to 'Leave group', leave_group_group_path(group), method: :delete, id: 'group_button', data: { confirm: 'Are you sure?' }
-          -else
-            %p= link_to 'Join group', join_group_group_path(group)
-          -if current_user[:id] == group.created_by
-            %p= link_to 'Destroy', group, method: :delete, remote: true, data: { confirm: 'Are you sure?' }
-            %p= link_to 'Edit', edit_group_path(group)
+    = render @groups
+    -#-@groups.each do |group|
+    -#  .cell{id: "group_#{group.id}"}
+    -#    =image_tag group.group_image.url
+    -#    .user-count
+    -#      = @count_users.count(group.id)
+    -#      .fas.fa-users
+    -#    %h3=group.group_name
+    -#    .container
+    -#      -if @user_group_ids.include?(group.id)
+    -#        %p= link_to 'Show', group
+    -#        -if current_user[:id] != group.created_by
+    -#          %p= link_to 'Leave group', leave_group_group_path(group), method: :delete, id: 'group_button', data: { confirm: 'Are you sure?' }
+    -#      -else
+    -#        %p= link_to 'Join group', join_group_group_path(group)
+    -#      -if current_user[:id] == group.created_by
+    -#        %p= link_to 'Destroy', group, method: :delete, remote: true, data: { confirm: 'Are you sure?' }
+    -#        %p= link_to 'Edit', edit_group_path(group)
   .pagination
     =will_paginate @groups, params: {is_active: true}
