--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -1,36 +1,12 @@
 .image-container
   =image_tag @group.group_image.url
-
 %h1
   =@group.group_name
   announcements
-
-= link_to 'Add announcement', '#',  id: 'new-announcement-link'
+.new-announcement-container
+  = link_to 'Add announcement', '#',  id: 'new-announcement-link'
+  .fas.fa-plus-circle
 #new-announcement
   =render 'announcements/form'
-
-
-%section.announcements
-  -@group.announcements.order(:exp_date).each do |announcement|
-    -if announcement.exp_date.future?
-      .announcement-cell{id: "announcement_#{announcement.id}"}
-        .left
-          %h1
-            =announcement.title
-          %p.date Ends in #{time_ago_in_words(announcement.exp_date)}
-          -if announcement.city.present?
-            %p.city City: #{announcement.city}
-          %p.group-name
-            Group: #{announcement.group.group_name}
-        .mid
-          %p.description
-            =truncate(announcement.description, length: 200, omission: '...')
-        .right
-          %p
-            = link_to 'Show', announcement
-          -if current_user[:id] == announcement.user_id
-            %p
-              =link_to 'Edit', edit_announcement_path(announcement)
-            %p
-              =link_to 'Destroy', announcement, method: :delete, data: { confirm: 'Are you sure?' }
-          %p.created-by Created by #{announcement.user.username}
+%section.announcements#container
+  = render @group_announcements
